<package>
    <name>libviso2</name>
    <version>0.0.1</version>
    <description>

        This is a ROS-Package for libviso2, a library for visual odometry created by Andeas Geiger
        from the Institute of Measurement and Control Systems at Karlsruhe Institute of Technology.

        Apart from the original libviso2 sources, this package contains
        a CMakeFile for easier integration into the ROS build system.

        Please note that this code is licensed under GPL. For a commercial usage, please
        contact Andreas Geiger directly (see
        <a href="http://www.cvlibs.net/software/libviso2.html">http://www.cvlibs.net/software/libviso2.html</a>).

    </description>
    <author>Andreas Geiger/geiger@kit.edu, maintained by: Stephan Wirth/stephan.wirth@uib.es</author>
    <license>GPL</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>http://ros.org/wiki/libviso2</url>

    <buildtool_depend>catkin</buildtool_depend>

</package>


