<package>
    <name>viso2</name>
    <version>0.0.1</version>
    <description>
        A ROS-Wrapper for libviso2, a library for visual odometry,
        maintained by the Systems, Robotics and Vision group of the
        University of the Balearic Islands, Spain. http://srv.uib.es </description>
    <author>Maintained by Stephan Wirth</author>
    <license>GPL</license>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <url>http://ros.org/wiki/viso2</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>libviso2</build_depend>
    <build_depend>viso2_ros</build_depend>

    <export>
        <metapackage/>
    </export>

</package>
